I think my VSCode has jre11 bindings.